--- a/2. Second task/source/sass/style.scss
+++ b/2. Second task/source/sass/style.scss
@@ -6,4 +6,5 @@
 @import "blocks/main-navigation.scss";
 @import "blocks/breadcrumbs.scss";
 @import "blocks/slider.scss";
-
+@import "blocks/filter.scss";
+@import "blocks/museums.scss";
