--- a/2. Second task/source/sass/style.scss
+++ b/2. Second task/source/sass/style.scss
@@ -8,3 +8,5 @@
 @import "blocks/slider.scss";
 @import "blocks/filter.scss";
 @import "blocks/museums.scss";
+@import "blocks/filter-mobile.scss";
+@import "blocks/map.scss";
