--- a/2. Second task/source/sass/style.scss
+++ b/2. Second task/source/sass/style.scss
@@ -3,10 +3,12 @@
 @import "normalize.scss";
 @import "global.scss";
 @import "blocks/main-header.scss";
+@import "blocks/main.scss";
 @import "blocks/main-navigation.scss";
 @import "blocks/breadcrumbs.scss";
 @import "blocks/slider.scss";
 @import "blocks/filter.scss";
 @import "blocks/museums.scss";
-@import "blocks/filter-mobile.scss";
 @import "blocks/map.scss";
+@import "blocks/filter-mobile.scss";
+@import "blocks/map-popup.scss";
