--- a/2. Second task/source/sass/variables.scss
+++ b/2. Second task/source/sass/variables.scss
@@ -10,36 +10,48 @@ $style-normal: normal;
 $font-size-nav: 18px;
 $line-height-nav: 24px;
 $font12: 12px;
+$font13: 13px;
+$font14: 14px;
 $font16: 16px;
 $font18: 18px;
 $font20: 20px;
+$font24: 24px;
+$font30: 30px;
 //
 $line15: 15px;
 $line16: 16px;
+$line18: 18px;
 $line19: 19px;
+$line20: 20px;
 $line21: 21px;
 $line24: 24px;
 $line25: 25px;
 $line27: 27px;
 $line38: 38px;
+$line44: 44px;
+$line46: 46px;
 // mobile
 $font-size-mobile: 14px;
 $line-height-mobile: 16px;
 // tablet
-$font-size-tablet: 14px;
-$line-height-tablet: 24px;
+$font-size-tablet: 16px;
+$line-height-tablet: 19px;
 // desktop
-$font-size-desktop: 14px;
-$line-height-desktop: 24px;
+$font-size-desktop: 19px;
+$line-height-desktop: 22px;
 // color
 $header-bg: #0084ba;
 $text-color: #1c2e36;
 $text-description: #0084ba;
 $filter-color: #666666;
 $btn-slider-color: #e26d5a;
-
 $text-white: white;
 $text-black: black;
+// @media
+// tablet
+$width-tablet: 768px;
+// desktop
+$width-desktop: 960px;
 // background-retina
 $retina-dpi: 144dpi;
 $retina-dppx: 1.5dppx;
