--- a/2. Second task/source/sass/blocks/main-header.scss
+++ b/2. Second task/source/sass/blocks/main-header.scss
@@ -3,28 +3,9 @@
   background-color: $header-bg;
 }
 
-.main__breadcrumbs {
-  margin-bottom: 7px;
-}
-
-.site-wrapper--main-title {
-  width: calc(280 * 100% / 320);
-}
-
-.main__title {
-  font-family: $font-actor;
-  font-size: $font20;
-  font-weight: $font-regular;
-  line-height: $line38;
-  padding-left: 1px;
-  margin: 0;
-}
-
-.main__slider {
-  margin-top: 9px;
-}
-
-.main__filter {
-  margin-bottom: 24px;
+@media (min-width: $width-tablet) {
+  .main-header {
+    min-height: 80px;
+  }
 }
 
