--- a/2. Second task/source/sass/blocks/map.scss
+++ b/2. Second task/source/sass/blocks/map.scss
@@ -1,67 +1,11 @@
 .map {
   display: none;
-  position: fixed;
-  top: 0;
-  left: 0;
-  width: 100%;
-  height: 100%;
 }
 
-.map__wrapper {
-  min-height: 52px;
-  background-color: $text-white;
-}
-
-.map__wrapper .site-wrapper {
-  @include flex;
-  justify-content: space-between;
-  align-items: center;
-  width: calc(280 * 100% / 320);
-  min-height: inherit;
-}
-
-.map__button {
-  font-size: $font12;
-  line-height: $line15;
-  font-weight: $font-semibold;
-  min-height: 32px;
-  color: $filter-color;
-  background-color: transparent;
-  border: 1px solid #c2c2c2;
-  border-radius: 3px;
-
-  &--left {
-    width: 45px;
+@media (min-width: $width-tablet) {
+  .map {
+    display: block;
+    width: 50%;
+    height: calc(100vh - 85px);
   }
-
-  &--right {
-    position: relative;
-    width: 56px;
-    padding-left: 7px;
-    text-align: left;
-
-    &::before,
-    &::after {
-      @include pseudo;
-      width: 5px;
-      height: 2px;
-      background-color: $filter-color;
-    }
-
-    &::before {
-      top: 14px;
-      right: 8px;
-      transform: rotate(45deg);
-    }
-
-    &::after {
-      top: 16px;
-      right: 8px;
-      transform: rotate(-45deg);
-    }
-  }
-}
-
-.map__iframe {
-  border: none;
 }
