--- a/2. Second task/source/sass/blocks/filter.scss
+++ b/2. Second task/source/sass/blocks/filter.scss
@@ -141,6 +141,7 @@
     height: 55px;
     padding-left: 5px;
     color: $filter-color;
+    background-color: transparent;
     border: 1px solid #c2c2c2;
     border-radius: 3px;
     appearance: none;
